# vanity-market-cli

./: .claudeignore  .gitignore  .mcp.json  .prettierignore  CLAUDE.md  Justfile  PATTERN_GEN_DIFF.md  README.md  README_public.md  build-all.sh  dev_test.bat  drizzle.config.ts  package-lock.json  package.json  sample-key.private  sample-key.pub  update-version.ts  working-aggrement.md  working-agreement.md
.tools/: do-pr-review-cleanup.sh  do-pr-review-gemini.sh  do-pr-review.sh  do-prepare-pr-claude.sh  do-prepare-webapp-pr.sh  do-release-cli-public-repo.sh  do-ws-for-pr.sh  pr-review.sh
app/: CLAUDE.md  PLAN.md  README.md  package-lock.json  package.json
cli/: .claudeignore  .env  .env.template  .gitignore  .npmignore  CLAUDE.md  PLAN.md  README.md  README_public.md  eslint.config.mjs  forward.js  package-lock.json  package.json  temp-hook-test.ts  tmp_result.json  tmp_result2.json  tsconfig.json
deployment/: README.md  deployment.md  generate.py
docs/: cicd.md  estimations.md  hashrate.md
golem-example/: prepare.py
infra/: .gitignore  .mcp.json  CLAUDE.md  Justfile  README.md  tfsec.yml
infra-runner/: Justfile  README.md  deployment.md  generate.py  generated.pub
sandbox/: .gitignore  Instructions.md  export_key.exp  prepare-glm-base.py  prepare-pre-release.py  prepare.py  prepare_prod.py
src/: app_context.ts  budget.ts  index.ts  scheduler.ts
tools/: Instructions.md  generate.ts  keystore.json  package-lock.json  package.json  random.ts  reveal.ts
z_projectmanagement/time_tracker/: README.md  fetch_timetracker.py  pyproject.toml  report_time.py
(+331 files in other folders)
