[project]
name = "time-tracker"
version = "0.1.0"
description = "JIRA Timetracker API client for fetching time entries"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
]

[project.scripts]
fetch-timetracker = "fetch_timetracker:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"